--- a/client/collections/collections.html
+++ b/client/collections/collections.html
@@ -51,7 +51,7 @@
         <div class="col-lg-3 col-xs-6">
           <a href="{{viewPath}}" class="small-box bg-{{background}}">
             <div class="inner">
-              <h3>{{getPublishedCount countPubName}}</h3>
+              <h3>{{getPublishedCount this}}</h3>
               <p>{{name}}</p>
             </div>
             <div class="icon">
